Interacting with react app from parent app (outside using vanilla JS)

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <body>
     <div>
         <h1>Below is inserted react app</h1>
+        <div class="buttons-container">
+            <button id="pass-btn" class="btn">Pass the props</button>
+        </div>
+        <p>While click the "Pass the props" you will pass the props into react app</p>
     </div>
     <div id="plugin"></div>
     <script src="dist/plugin.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
