Index.html file updated

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         </div>
         <p>While click the "Pass the props" you will pass the props into react app</p>
     </div>
+    <!-- JUST PASTE INTO YOUR HTML THIS TWO LINES -->
     <div id="plugin"></div>
     <script src="dist/plugin.js"></script>
+    <!-- ---------------------------------------- -->
     <script src="./main.js"></script>
 </body>
 </html>
